@@ -18,9 +18,9 @@ import java.io.IOException;
 import java.net.URI;
 import java.net.URL;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashSet;
 import java.util.List;
 import java.util.jar.Attributes;
@@ -28,7 +28,7 @@ import java.util.jar.JarFile;
 import java.util.jar.Manifest;
 
 @ApiStatus.Internal
-public class ClasspathLocator extends AbstractModProvider implements IModLocator {
+public final class ClasspathLocator extends AbstractModProvider implements IModLocator {
     private static final Logger LOGGER = LogUtils.getLogger();
     private static final Attributes.Name MOD_TYPE = new Attributes.Name("FMLModType");
 
@@ -80,11 +80,11 @@ public class ClasspathLocator extends AbstractModProvider implements IModLocator
         return ret;
     }
 
-    private List<URL> getUrls(ClassLoader cl, String resource) {
+    private static List<URL> getUrls(ClassLoader cl, String resource) {
         try {
             var lst = Collections.list(cl.getResources(resource));
             if (LOGGER.isDebugEnabled(LogMarkers.SCAN)) {
-                Collections.sort(lst, (a, b) -> a.toString().compareTo(b.toString()));
+                lst.sort(Comparator.comparing(URL::toString));
                 LOGGER.debug(LogMarkers.SCAN, "Scanning Classloader: {} for {}", cl, resource);
                 for (var url : lst)
                     LOGGER.debug(LogMarkers.SCAN, "\t{}", url);
@@ -104,8 +104,7 @@ public class ClasspathLocator extends AbstractModProvider implements IModLocator
             len += 2;
         }
         str = str.substring(0, str.length() - len);
-        var path = Paths.get(URI.create(str));
-        return path;
+        return Path.of(URI.create(str));
     }
 
     private static Path getPathFromResource(ClassLoader cl, String resource) {
